<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/jazyk"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkCz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jazyk_cz"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/chkEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jazyken"
                android:checked="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/typ"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_book"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/chkEbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_ebook"
                android:checked="true" />

            <CheckBox
                android:id="@+id/chkAudioBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_audio"
                android:checked="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/filterit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter" />

</LinearLayout>