<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_locality"
        android:id="@+id/textView" />

    <Spinner
        android:id="@+id/spinner"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rate_book"
        android:id="@+id/textView2" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:stepSize="1.0"
        android:layout_gravity = "center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rate_words_book"
        android:id="@+id/textView3" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_and_return"
        android:id="@+id/button"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal" />

</LinearLayout>