<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:textStyle="bold"
        android:id="@+id/history_kdo"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/jmeno"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:textStyle="bold"
        android:id="@+id/history_od"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/pujceno"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.3"
        android:textStyle="bold"
        android:id="@+id/history_do"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hodnoceni"/>
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:visibility="gone"
        android:id="@+id/neni_history"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/neni_historie"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/todo_list_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>